update mega result notebook

--- a/mega/mega.ipynb
+++ b/mega/mega.ipynb
@@ -52,13 +52,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "age of (-inf, 10] MAE: 4.29613602509016 num: 1166\n",
-      "age of (10, 20] MAE: 4.475671844655555 num: 661\n",
-      "age of (20, 30] MAE: 3.9545115392092627 num: 1053\n",
-      "age of (30, 40] MAE: 4.6046963932068365 num: 615\n",
-      "age of (40, 50] MAE: 6.12768520886385 num: 158\n",
-      "age of (50, 60] MAE: 7.826767603556315 num: 84\n",
-      "age of (60, 70] MAE: 8.250684689252804 num: 78\n"
+      "age of (-inf, 10]\n",
+      "MAE: 4.29613602509016 num: 1166\n",
+      "CA: [0.52401372 0.69982847 0.81989708 0.91080617]\n",
+      "\n",
+      "age of (10, 20]\n",
+      "MAE: 4.475671844655555 num: 661\n",
+      "CA: [0.41149773 0.63691377 0.80030257 0.91981846]\n",
+      "\n",
+      "age of (20, 30]\n",
+      "MAE: 3.9545115392092627 num: 1053\n",
+      "CA: [0.48622982 0.71320038 0.83950617 0.94207028]\n",
+      "\n",
+      "age of (30, 40]\n",
+      "MAE: 4.6046963932068365 num: 615\n",
+      "CA: [0.3902439  0.64227642 0.78861789 0.91056911]\n",
+      "\n",
+      "age of (40, 50]\n",
+      "MAE: 6.12768520886385 num: 158\n",
+      "CA: [0.24683544 0.43670886 0.67088608 0.82278481]\n",
+      "\n",
+      "age of (50, 60]\n",
+      "MAE: 7.826767603556315 num: 84\n",
+      "CA: [0.14285714 0.3452381  0.53571429 0.73809524]\n",
+      "\n",
+      "age of (60, 70]\n",
+      "MAE: 8.250684689252804 num: 78\n",
+      "CA: [0.19230769 0.33333333 0.48717949 0.71794872]\n",
+      "\n"
      ]
     }
    ],
@@ -67,14 +88,18 @@
     "    if i == 10:\n",
     "        age_seperate = age[np.where(age <= i)[0]]\n",
     "        predict_age_seperate = predict_age[np.where(age <= i)[0]]\n",
-    "        output_str = \"age of (-inf, {}] MAE: \".format(str(i))\n",
+    "        output_str = \"age of (-inf, {}]\\nMAE: \".format(str(i))\n",
     "    else:\n",
     "        age_seperate = age[np.where((age <= i) & (age > i - 10))[0]]\n",
     "        predict_age_seperate = predict_age[np.where((age <= i) & (age > i - 10))[0]]\n",
-    "        output_str = \"age of ({}, {}] MAE: \".format(str(i - 10), str(i))\n",
+    "        output_str = \"age of ({}, {}]\\nMAE: \".format(str(i - 10), str(i))\n",
     "    if age_seperate.shape[0] > 0:\n",
     "        num_str = \" num: \" + str(age_seperate.shape[0])\n",
-    "        print(output_str + str(mean_absolute_error(age_seperate, predict_age_seperate)) + num_str)"
+    "        diff = abs(age_seperate - predict_age_seperate)\n",
+    "        ca = np.array([sum(diff <= 3.0), sum(diff <= 5.0), sum(diff <= 7.0), sum(diff <= 10.0)]) / len(diff)\n",
+    "        print(output_str + str(mean_absolute_error(age_seperate, predict_age_seperate)) + num_str)\n",
+    "        print(\"CA: \" + str(ca))\n",
+    "        print()"
    ]
   },
   {
